--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>가계부</title>
   <meta property="og:title" content="가계부" />
   <meta property="og:description" content="조수희 배워라" />
-  <meta property="og:image" content="https://wekuly.github.io/household/image/gagyebu.jpg" />
+  <meta property="og:image" content="https://github.com/wekuly/household/gagebu.jpg" />
   <meta property="og:url" content="https://wekuly.github.io/household" />
   <meta property="og:type" content="website" />
 </head>
