--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
   <title>가계부</title>
   <meta property="og:title" content="가계부" />
-  <meta property="og:description" content="조수희 배워라" />
+  <meta property="og:description" content="가계부 프로젝트" />
   <meta property="og:image" content="https://wekuly.github.io/household/image/gagebu.jpg" />
   <meta property="og:url" content="https://wekuly.github.io/household" />
   <meta property="og:type" content="website" />
